--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "author": "Nevin Foster",
   "scripts": {
-    "start": "bot.js",
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
