--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DISCORD_TOKEN=OTgxMjUwNjk3NDQ0MDk0MDMy.G-gHnd.H0ZDNztbmojeheDrTw8hsWssIaT6U92X_BMd6Y
 CLIENT_ID=981250697444094032
 GUILD_ID=848804519847526460
+GOOGLE_CALENDAR_ID=buildingverses@gmail.com
 GOOGLE_DATA_DOCUMENT=11Nii2VtPXxlttXZwtEaE5x_71bGBl_7gPQmIY13dr2M
 GOOGLE_KEY_FILE=./discord-bot-352422-49c1078a6631.json
